[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Controller.gd" type="Script" id=2]

[node name="Controller" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 53.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel"]
margin_top = 4.0
margin_right = 1920.0
margin_bottom = 60.0
size_flags_vertical = 3

[node name="FileButton" type="MenuButton" parent="VBoxContainer/Panel/HBoxContainer"]
margin_right = 35.0
margin_bottom = 56.0
text = "File"
switch_on_hover = true

[node name="ViewWindow" type="Control" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 1920.0
margin_bottom = 1021.0
size_flags_vertical = 3
size_flags_stretch_ratio = 18.0

[node name="View" parent="VBoxContainer/ViewWindow" instance=ExtResource( 1 )]

[node name="Panel2" type="Panel" parent="VBoxContainer"]
margin_top = 1025.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
custom_constants/margin_top = 10
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WordCount" type="Label" parent="VBoxContainer/Panel2/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1920.0
margin_bottom = 55.0
size_flags_vertical = 5
